# tim

./: .gitignore  AGENTS.md  CONCEPT.md  Cargo.toml  Ideas-Claude-2025-11-17.md  PLAN.md  README.md  REVIEW-WEB.md  REVIEW.md  TODO.md  buf.yaml  flake.nix  sse.md
.claude/: settings.local.json
tim-agent/: Cargo.toml  agents.toml  build.rs
tim-agent/.cargo/: config.toml
tim-agent/prompts/: alice_sysp.txt  alice_userp.md  alice_userp.txt  history.md  jarvis.md  jarvis_sysp.txt  jarvis_userp.md  jarvis_userp.txt  research-engineer-assistant.md  space_abilities.txt  space_ability_entry.txt  tim-history.md  tim-sys.md
tim-agent/src/: agent.rs  crawler.rs  lib.rs  llm.rs  main.rs  tim_client.rs
tim-agent/src/llm/: ability.rs  agent.rs  chatgpt.rs  llm.rs  llm_agent.rs  (+3 more)
tim-agent/tests/: sse_debug.rs
tim-code/: .gitignore  Cargo.toml  buf.gen.yaml  buf.yaml  build.rs  rustfmt.toml
tim-code/api/: api.proto
tim-code/src/: agents.rs  chatgtptest.rs  flows.rs  gpt.rs  kvstore.rs  lib.rs  main.rs  services.rs  session.rs  tim_ability.rs  tim_api.rs  tim_capability.rs  tim_grpc_api.rs  tim_message.rs  tim_session.rs  tim_space.rs  tim_storage.rs  tim_timite.rs
tim-code/src/agents/: chatgpt.rs
tim-code/src/flows/: update_decide_reciever_flow.rs
tim-code/src/gpt/: chatgpt.rs
tim-code/src/services/: assistant.rs  messaging.rs  space_updates_service.rs  tim_api.rs
tim-code/tests/: README.md  common.rs  tim_api_flow_abilities.rs  tim_api_flow_capabilities.rs  tim_api_flow_timeline.rs  tim_api_flow_trusted_events.rs  tim_api_flow_trusted_updates.rs  tim_grpc_api.rs  tim_timite_ids.rs
tim-code/tim/code/db/g1/: db.proto
tim-lib/: Cargo.toml
tim-lib/src/: kvstore.rs
tim-rfc/: trfc04.md  trfc05-agent-mem.md  trfc06-agent-sse.md
tim-spec/: ideas.md  tspec01.md  tspec1.md  tspec2.md  tspec3.md
tim-term/: Cargo.toml  build.rs
tim-term/src/: app.rs  client.rs  error.rs  event.rs  main.rs  ui.rs
tim-web/: package-lock.json  package.json
tim-web-ui/: .gitignore  buf.gen.yaml  package-lock.json  package.json  svelte.config.js
tim-web-ui/src/: app.css
tim-web/src/: app.css
(+48 files in other folders)
