[package]
name = "tim-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tim-code"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-web = "0.14"
tonic-prost = "0.14"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5.2"
http = "1.3.1"
prost = "0.14"
prost-types = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
